--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ GOOGLE_ID=787051338181-ocors7fql95kc2r5gtuap1ihi990j19g.apps.googleusercontent.c
 GOOGLE_SECRET=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
 TWITTER_CLIENT_ID=TUltWTN3aEFHMVc0OFg0dDVwRDE6MTpjaQ
 TWITTER_CLIENT_SECRET=_7mtNk8LdNCNVvnfgkmv1dBDzXuIwBe0HkgPPZqnHgmwl5MRpv
+NEXTAUTH_URL = "http://localhost:3000"
+NEXTAUTH_SECRET_KEY="test"
