--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.17",
@@ -22,6 +23,7 @@
     "@supabase/supabase-js": "^2.14.0",
     "@tailwindcss/forms": "^0.5.3",
     "aos": "^2.3.4",
+    "extract-urls": "^1.3.2",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
     "react": "18.2.0",
