--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "@supabase/supabase-js": "^2.14.0",
     "@tailwindcss/forms": "^0.5.3",
     "aos": "^2.3.4",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "extract-urls": "^1.3.2",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
